--- a/src/pages/login/login-input.less
+++ b/src/pages/login/login-input.less
@@ -7,11 +7,13 @@
  
  .login-input{
     margin-bottom: 5px;
+    color:#fff;
     .icon{
       .square(20px);
       display: inline-block;
     }
     input{
+      color:#fff;
       &:extend(.login__input);
       outline: 0;
       margin-left: 20px;
