--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -19,21 +19,13 @@
     color:#fff;
     &>div{
       margin-bottom: 5px;
-      .icon{
-        .square(20px);
-        display: inline-block;
-      }
-      input{
-        &:extend(.login-input);
-        outline: 0;
-        margin-left: 20px;
-      }
       .login-btn{
         .button(130px,40px,transparent,2px solid green,10px);
         color:green;
         font-weight: bold;
         position: relative;
         margin-top: 20px;
+        cursor: pointer;
       }
     }
     
