组织标志添加

--- a/src/style/variable.less
+++ b/src/style/variable.less
@@ -1,1 +1,11 @@
 @font-size-root:14px;
+
+/*各种高度和宽度*/
+@headerHeight:60px;  //header高度
+@barsWidth:150px;  //菜单宽度
+
+@rootIndex:60;
+//下面是相对的index
+@headerIndex:70;
+@leftBarsIndex:69;
+@bodyIndex:68;
