--- a/src/components/menus/menus.less
+++ b/src/components/menus/menus.less
@@ -7,6 +7,7 @@
     padding: 10px;
     line-height: 20px;
     cursor: pointer;
+    transition: background-color .2s ease;
     &>img{
       .square(15px);
       vertical-align: middle;
@@ -14,7 +15,8 @@
       transition: transform .2s ease;
     }
     &.active{
-      opacity: .8;
+     // opacity: .8;
+      background-color: #059898;
     }
     &.open{
       &>img{
