--- a/src/components/pagination/pagination.less
+++ b/src/components/pagination/pagination.less
@@ -60,6 +60,11 @@
           }
         }
       }
+      &>span{
+        &.ellipsis{
+          padding: 0 5px;
+        }
+      }
     }
   }
 }
